--- a/src/layout/layout.css
+++ b/src/layout/layout.css
@@ -8,13 +8,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.96;
+  background-color: #fff;
+  flex-direction: row;
+  align-items: center;
+}
+header {
+  display: flex;
+}
 article,
 aside,
 details,
 figcaption,
 figure,
 footer,
-header,
 main,
 menu,
 nav,
@@ -62,7 +74,6 @@ dfn {
 }
 h1 {
   font-size: 2em;
-  margin: 0.67em 0;
 }
 mark {
   background-color: #ff0;
